--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,10 @@
 body {
-  font-family: 'Roboto', sans-serif;
-  background: -webkit-linear-gradient(90deg, #2BC0E4 10%, #EAECC6 90%); /* Chrome 10+, Saf5.1+ */
-  background:    -moz-linear-gradient(90deg, #2BC0E4 10%, #EAECC6 90%); /* FF3.6+ */
-  background:     -ms-linear-gradient(90deg, #2BC0E4 10%, #EAECC6 90%); /* IE10 */
-  background:      -o-linear-gradient(90deg, #2BC0E4 10%, #EAECC6 90%); /* Opera 11.10+ */
-  background:         linear-gradient(90deg, #2BC0E4 10%, #EAECC6 90%); /* W3C */
+	font-family: 'Roboto', sans-serif;
+	background: #4CA1AF;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #C4E0E5, #4CA1AF);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #C4E0E5, #4CA1AF); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+
 }
 
 ul {
@@ -12,7 +12,6 @@ ul {
 	margin: 0;
 	padding: 0;
 }
-
 
 h1 {
 	background: #2980b9;
@@ -28,7 +27,6 @@ h1 {
 	float: right;
 }
 
-
 li {
 	background: #fff;
 	height: 40px;
@@ -36,7 +34,7 @@ li {
 	color: #666;
 }
 
-li:nth-child(2n){
+li:nth-child(2n) {
 	background: #f7f7f7;
 }
 
@@ -52,7 +50,7 @@ span {
 	opacity: 0;
 }
 
-span.edit{
+span.edit {
 	float: right;
 	margin-right: 0;
 }
@@ -69,10 +67,10 @@ input {
 	width: 100%;
 	padding: 13px 13px 13px 20px;
 	box-sizing: border-box;
-	border: 3px solid rgba(0,0,0,0);
+	border: 3px solid rgba(0, 0, 0, 0);
 }
 
-input:focus{
+input:focus {
 	background: #fff;
 	border: 3px solid #2980b9;
 	outline: none;
@@ -82,7 +80,7 @@ input:focus{
 	width: 360px;
 	margin: 100px auto;
 	background: #f7f7f7;
-	box-shadow: 0 0 3px rgba(0,0,0, 0.1);
+	box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
 }
 
 .completed {
@@ -90,13 +88,12 @@ input:focus{
 	text-decoration: line-through;
 }
 
-@media screen and (max-width:600px){
-
-	#container{
+@media screen and (max-width:600px) {
+	#container {
 		width: 300px;
 	}
 
-	ul, input{
+	ul, input {
 		font-size: 15px;
 	}
 
