--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -74,9 +74,10 @@ input:focus {
 	outline: none;
 }
 
-#container {
-	width: 360px;
-	margin: 100px auto;
+.content-list {
+	margin: 200px auto;
+	padding-right: 0;
+	padding-left: 0;
 	background: #f7f7f7;
 	box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
 }
